--- a/css/estilo.css
+++ b/css/estilo.css
@@ -420,7 +420,50 @@ justify-content: center;}
 	background:#00B495;
 }
 
+/*people*/
 
+.People{
+    height: 700px;
+	font-family: 'Titillium Web', sans-serif;
+    background-color: #d74680;
+    color: white;
+    text-align: center;
+}
+.People h2{
+    margin-top: 80px;
+    font-weight: bold;   
+}
+.People h4{
+	font-size:1.2em;
+	text-align:center;
+	font-weight:400;
+	width:70%;
+	margin:0 auto;	
+	padding-top: 1em;
+}
+.People .bar{
+  margin-top: 25px;
+  width: 85px;
+  height: 4px;
+  background-color:#b73c6d;
+}
+.People .list{
+    margin-top: 80px;
+}
+.People img{
+    max-width: 100%;
+    float: left;
+}
+.People h3{
+color: #fff;	
+}
+.People h5{
+	color: #ffdd99;
+}
+.People p{
+  color: #fff;
+    
+}
 .Contact{margin-top: -20px; width: 100%;height: 740px;background: #3c5499;color: #fff;}
 .Contact .bar{margin-top: 10px; width: 60px; height: 4px; background-color:#2e437e }
 .Contact h2{font-weight: 600; letter-spacing: 1.5px;}
